little difficult with audio

--- a/starwars.html
+++ b/starwars.html
@@ -58,8 +58,8 @@
                     sombres bugs?
                     Et surtout, deviendra-t-il Developper Web Jedi?...
                 </p>
-                <audio preload="auto " autoplay>
-                    <source src="StarWars-song.mp3" type="https://www.youtube.com/watch?v=tGsKzZtRwxw" />
+                <audio autoplay id="playAudio">
+                    <source src="StarWars-theme.mp3"/>
                 </audio>
             </section>
         </div>
