--- a/starwars.html
+++ b/starwars.html
@@ -58,11 +58,9 @@
                     sombres bugs?
                     Et surtout, deviendra-t-il Developper Web Jedi?...
                 </p>
-				<iframe src="StarWars-theme.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-</iframe> 
-                <audio autoplay loop id="playAudio">
-                    <source src="StarWars-theme.mp3"/>
-                </audio>
+				<audio autoplay
+				src="StarWars-theme.mp3" type="audio/mpeg">
+				</audio>
             </section>
         </div>
     </main>
