--- a/starwars.html
+++ b/starwars.html
@@ -2,39 +2,43 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Star progra wars</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="starwars.css" />
+<link rel="stylesheet" href="starwars.css">
 </head>
-
 <body>
-    <main>
-        <div id="box">
-		<section class="intro">
-		<p><center>A long time ago, in a galaxy far</p>
-		<p>far away...</center></p>
-		</section>
-            <section id="Upsito">
-                <h1>Becode</h1>
-                <h2>A Jedi Code Story</h2>
-                <p>
-                </p>
-                <p>
-                </p>
-                <p>
-                </p>
-                <p>
-                </p>
-                <p>
-                </p>
-				<audio autoplay
-				src="StarWars-theme.mp3" type="audio/mpeg">
-				</audio>
-            </section>
-        </div>
-    </main>
-</body>
+<div class="star-wars-intro">
 
+ 
+  <p class="intro-text">
+    A few days ago, during...
+  </p>
+
+  
+  <h2 class="main-logo">
+    <img src="image/logo_Becode.png">
+  </h2>
+
+  
+  <div class="main-content">
+
+    <div class="title-content">
+      <p class="content-header">BeCode</p>
+
+
+    <p class="content-body">
+	A blabla blablabla force obscurs blabla sabre laser Blabla
+    </p>
+	<p>
+	A blabla blabla côté obscurs blabla luc je suis ton père Blabla
+	</p>
+	<p>
+	A blabla blabla ça marche pas blabla
+	</p>
+
+	<audio preload="auto" autoplay>
+	<source src="StarWars-theme.mp3" type="audio/mpeg" />
+	</audio>
+    </div>
+  </div>
+</div>
+</body>
 </html>
