star wars crédit

--- a/starwars.html
+++ b/starwars.html
@@ -25,13 +25,13 @@
 
 
     <p class="content-body">
-	A blabla blablabla force obscurs blabla sabre laser Blabla
+	Dans la galaxie lointaine, près du système politique se situe une petite planète ou de vaillant guerrier se batte face à la terrible invasion des bugs. 
     </p>
 	<p>
-	A blabla blabla côté obscurs blabla luc je suis ton père Blabla
+	Armé de leurs courage, et de leurs clavier, les très non célèbres codeur de becode s'armèrent de patience et de rage afin de contrer l'invasion avec de très grosses difficultées avant de réussir 
 	</p>
 	<p>
-	A blabla blabla ça marche pas blabla
+	Malheureusement, l'empire VSCode prend de l'ampleur, faisant de nombreux partisans dans ces rangs, de plus en plus nombreux, mais resiste encore et toujours une personne au crayon affuté et son bloc-note sur les genous, que pourra t'il faire afin de resister face aux assauts plus virulent de l'empereur VS...
 	</p>
 
 	<audio preload="auto" autoplay>
